# AllFamilyAI

./: .gitignore  DB_SCHEMA.md  DB_SCHEMA2.md  ERD.md  README.md  question_templates_100.json
ai_server/: .dockerignore  .env.example  .gitignore  CLEAN_ARCHITECTURE_MIGRATION.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  env.example  openapi.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_dev.py  test-report.xml  개인정보처리방침.md  서비스이용약관.md
ai_server/app/: __init__.py  dependencies.py  main.py
ai_server/app/adapters/: openai_client.py
ai_server/app/answer/: base.py  models.py  openai_answer_analyzer.py
ai_server/app/application/: __init__.py
ai_server/app/core/: config.py
ai_server/app/database/: database.py  models.py  schema.sql
ai_server/app/domain/: __init__.py
ai_server/app/infrastructure/: __init__.py
ai_server/app/member_profile/: base.py  models.py  rules.py  updater.py
ai_server/app/models/: __init__.py  enhanced_models.py  question.py
ai_server/app/presentation/: __init__.py  dependencies.py
ai_server/app/question/: base.py  models.py  openai_question_generator.py  utils.py
ai_server/app/routers/: __init__.py  analysis_router.py  answers_router.py  mcp_router.py  profile_router.py  question_router.py
ai_server/app/services/: database_service.py  enhanced_openai_service.py  mcp_service.py  openai_service.py
ai_server/app/utils/: score_sanitizer.py
ai_server/prompts/: family_generate.yaml  family_recent.yaml  personal_generate.yaml  summary_headline.yaml
ai_server/tests/: __init__.py  conftest.py  mocks.py
(+72 files in other folders)
